flux/cluster/apps/olympus/umami/middleware.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: umamijs
  namespace: olympus
spec:
  replacePathRegex:
    regex: ^/script\.js
    replacement: /umami.js
