flux/cluster/apps/olympus/umami/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: umami
  namespace: olympus
  labels:
    app: umami
spec:
  replicas: 1
  selector:
    matchLabels:
      app: umami
  template:
    metadata:
      labels:
        app: umami
    spec:
      containers:
        - name: umami
          imagePullPolicy: IfNotPresent
          image: ghcr.io/mikecao/umami:postgresql-v1.31.0
          ports:
            - containerPort: 3000
              name: web
