flux/cluster/apps/olympus/umami/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: umami
  namespace: olympus
spec:
  selector:
    app: umami
  ports:
    - protocol: TCP
      port: 80
      targetPort: web
