flux/cluster/apps/olympus/umami/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: umami
  namespace: olympus
spec:
  rules:
  - host: "analytics.0x76.dev"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service: 
            name: umami
            port: 
              number: 80
